--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "react-scripts": "2.1.3"
   },
   "scripts": {
+    "lint": "echo RUN LINT",
+    "test": "echo RUN TEST",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
